# ztp_graphql_keycloak

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.rootless  Dockerfile.rootless.dev  Jenkinsfile  Makefile  Pipfile  README.md  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint.sh  manage.py  pyproject.toml  sonar-project.properties
apps/data_tables/: admin.py  apps.py  models.py  schema.py  types.py  views.py
apps/data_tables/fixtures/: test_get_table_sample_data.json
apps/data_tables/migrations/: 0001_initial.py
apps/data_tables/test/: test_get_table.py  test_models.py
apps/documents/: admin.py  models.py  schema.py  types.py  views.py
apps/documents/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  types.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/: index.html
chart/: .gitignore  Chart.yaml  Makefile  README.md  values.yaml
chart/keycloak-config/: ztp-realm-config-convert.yaml  ztp-realm-config-copy.yaml  ztp-realm-config.yaml
chart/templates/: certificate.yaml  deployment.yaml  gateway.yaml  issuer.yaml  keycloak-realm-config.yaml  keycloak.yaml  service.yaml  virtualservice.yaml
data/: sample_data.json
docker-compose/: Makefile  docker-compose.yml
docker-compose/keycloak/config/: realm-export.json
docker-compose/opa/policies/: policy.rego
docker-compose/postgres/: init-record-db.sql
docs/: gql_queries.md  running_in_development.md  running_in_production.md  using_sqlite3.md
docs/template/: conf.py
templates/: hello.html.j2  index.html.j2
ztp_browser/: asgi.py  auth.py  settings.py  urls.py  wsgi.py
ztp_browser/settings/: __init__.py  base.py  development.py  production.py
ztp_browser/utils/: tests.py  ztp_opa_client.py
ztpvis/: __init__.py  database.py  graphql.py  main.py  utils.py
ztpvis/api/: sso.py
(+8 files in other folders)
