[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ztp-browser"
authors = []
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version", "description"]
dependencies = []

[tool.pylama]
async = 1
linters = "pycodestyle,pyflakes,mccabe,pydocstyle,pylint,mypy"
skip = ".venv/*,__pycache__/*,build/*,dist/*"
max_line_length = 120
format = "pydocstyle"
ignore = "C0114,C0116,D100,D104,D107,D203,D213,D407,D415"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true