[tool.poetry]
name = "ztp_browser"
version = "0.1.0"
description = ""
authors = ["anon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "*"
strawberry-graphql-django = "*"
mozilla-django-oidc = "*"
psycopg2-binary = "*"
astunparse = "*"
python-json-logger = "*"
opa-python-client = "*"
python-dotenv = "*"
django-cors-headers = "*"
django-request-logging = "*"
djangorestframework = "*"
pillow = "*"
gunicorn = "*"
uvicorn = "*"
whitenoise = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-napoleon = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pylama = {extras = ["all", "toml"], version = "*"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylama]
async = 1
linters = "pycodestyle,pyflakes,mccabe,pydocstyle,pylint,mypy"
skip = ".venv/*,__pycache__/*,build/*,dist/*"
max_line_length = 120
format = "pydocstyle"
ignore = "C0114,C0116,D100,D104,D107,D203,D213,D407,D415"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
